# warden

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: codecov.yml  renovate.json
.sqlx/: query-0569b190a72b273d08b9f6e582eee8725176ded060a0b7254ec8c244d7b64d4e.json  query-1f6114577d8a5d358ad7a36b8e326e5ecf5fab54b0b145b31b5a644ecacb2b2e.json  query-27de60282a980d2f107066d7743c845e998bf059c6962a4da64cd12c37ea33c9.json  (+18 more)
contrib/: compose.opentelemetry.yaml  compose.yaml
crates/aggregator/: .env.example  Cargo.toml  Dockerfile  aggregator.toml
crates/aggregator/migrations/: 20250816113451_evaluation.sql
crates/aggregator/src/: cnfg.rs  main.rs  processor.rs  state.rs
crates/aggregator/src/processor/: aggregate.rs
crates/api-config/: Cargo.toml
crates/api-config/src/: lib.rs  main.rs
crates/api-config/src/entities/: mod.rs  rule_config.rs
crates/api-config/src/handler/: mod.rs  rule_config.rs
crates/api-config/src/server/: mod.rs
crates/api-config/src/server/graphql/: mod.rs
crates/api-config/src/server/graphql/query/: mod.rs  rule_config.rs
crates/api-config/src/state/: mod.rs
crates/configuration/: .dockerignore  .env.example  Cargo.toml  Dockerfile  warden-config.toml
crates/configuration/migrations/: 20250812031141_routing.sql  20250814155222_rule.sql  20250816073400_typology.sql
crates/configuration/src/: cnfg.rs  main.rs  server.rs  state.rs
crates/configuration/src/server/: error.rs  grpc_svc.rs  http_svc.rs  interceptor.rs  reload_stream.rs  version.rs
crates/configuration/src/server/http_svc/: routes.rs
crates/configuration/src/server/http_svc/routes/: routing.rs  rule.rs  typology.rs
crates/configuration/src/server/http_svc/routes/routing/: delete_routing.rs  get_active.rs  post_routing.rs  replace_routing.rs
crates/configuration/src/server/http_svc/routes/rule/: create.rs  delete.rs  get.rs  update.rs
crates/configuration/src/server/http_svc/routes/typology/: create_typology.rs  delete_typology.rs  get_typology.rs  post_typology.rs
crates/configuration/src/state/: cache_key.rs  routing.rs  rule.rs  typology.rs
crates/configuration/src/state/routing/: mutate_routing.rs  query.rs  query_routing.rs
crates/configuration/src/state/rule/: mutate_rule.rs  query_rule.rs
crates/configuration/src/state/typology/: mutate_typology.rs  query_typology.rs
crates/pseudonyms/: .env.example  Cargo.toml  Dockerfile  pseudonyms.toml
crates/pseudonyms-service/: Cargo.toml
crates/pseudonyms-service/src/: lib.rs
crates/pseudonyms-service/src/server/: mod.rs
crates/pseudonyms/migrations/: 20250810112925_account.sql  20250810112930_entity.sql  20250810112936_account_holder.sql  20250810112945_transaction_relationship.sql
crates/pseudonyms/src/: lib.rs  main.rs  server.rs  state.rs
crates/pseudonyms/src/server/: interceptor.rs
crates/pseudonyms/src/state/: mutate.rs
crates/pseudonyms/tests/: helpers.rs
crates/pseudonyms/tests/grpc/: mod.rs
crates/pseudonyms/tests/grpc/mutate/: create.rs
crates/router/: Cargo.toml  Dockerfile  router.toml
crates/router/src/: cnfg.rs  main.rs  processor.rs  state.rs
crates/router/src/processor/: grpc.rs  load.rs  publish.rs  reload.rs  route.rs
crates/rule-executor/: .env.example  Cargo.toml  Dockerfile  rule-executor.toml
crates/rule-executor/src/: cnfg.rs  main.rs  processor.rs  state.rs
crates/rule-executor/src/processor/: publish.rs  reload.rs  rule.rs
crates/rule-executor/src/processor/rule/: configuration.rs  determine_outcome.rs  rule_901.rs
crates/typologies/: Cargo.toml  Dockerfile  typologies.toml
crates/typologies/src/: cnfg.rs  main.rs  processor.rs  state.rs
crates/typologies/src/processor/: driver.rs  publish.rs  reload.rs  typology.rs
crates/typologies/src/processor/typology/: aggregate_rules.rs  evaluate_expression.rs
crates/warden/: .env.example  Cargo.toml  Dockerfile  warden.toml
crates/warden-driver/: Cargo.toml
crates/warden-driver/src/: lib.rs  main.rs
crates/warden-driver/src/state/: mod.rs
crates/warden/migrations/: 20250810160034_transaction_history.sql
crates/warden/src/: cnfg.rs  lib.rs  main.rs  server.rs  state.rs  version.rs
crates/warden/src/api/: error.rs  mod.rs  pacs002.rs  pacs008.rs
crates/warden/src/server/: grpc.rs  middleware.rs  mod.rs  pacs002.rs  pacs008.rs  pain001.rs  pain013.rs  publish.rs  routes.rs
crates/warden/src/server/middleware/: trace_layer.rs
crates/warden/src/server/routes/: metrics.rs  processor.rs
crates/warden/src/server/routes/processor/: pacs002.rs  pacs008.rs
crates/warden/src/state/: mod.rs
database/tx_hist/: Cargo.toml
database/tx_hist/migrations/: 00_transaction_history.sql
database/tx_hist/src/: lib.rs
lib/warden-core/: Cargo.toml  build.rs
lib/warden-core/proto/config/: rule.proto
lib/warden-core/proto/iso20022/: pain.001.001.12.proto  pain.013.001.11.proto
lib/warden-core/proto/pseudonyms/: account.proto  account_holder.proto  entity.proto  transaction_relationship.proto
lib/warden-core/src/: config.rs  configuration.rs  google.rs  iso20022.rs  lib.rs  message.rs  pseudonyms.rs
lib/warden-core/src/configuration/: conv.rs
lib/warden-core/src/google/: parser.rs
lib/warden-core/src/google/parser/: dt.rs  money.rs
lib/warden-core/src/utils/: mod.rs  time.rs
lib/warden-infra/: Cargo.toml
lib/warden-infra/src/: lib.rs
lib/warden-infra/src/cache/: mod.rs
lib/warden-infra/src/config/: mod.rs
lib/warden-infra/src/configuration/: cache.rs  mod.rs  nats.rs
lib/warden-infra/src/nats/: mod.rs
lib/warden-infra/src/postgres/: mod.rs
lib/warden-infra/src/services/: mod.rs  nats.rs  postgres.rs
lib/warden-infra/src/tracing/: mod.rs  opentelemetry.rs
lib/warden-middleware/: Cargo.toml
lib/warden-middleware/src/: lib.rs  metrics.rs  trace_layer.rs
lib/warden-stack/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
lib/warden-stack/examples/: tracing.rs
lib/warden-stack/src/: cache.rs  config.rs  lib.rs  nats.rs  postgres.rs  tracing.rs
lib/warden-stack/src/cache/: sentinel.rs
lib/warden-stack/src/tracing/: loki.rs  telemetry.rs
(+37 files in other folders)
