[package]
name = "api-config"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["macros"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tracing.workspace = true
warden-core = { workspace = true, features = ["serde", "time"] }
warden-infra = { workspace = true, features = ["tracing"] }
