[package]
name = "warden-config"
version = "0.1.0"
edition = "2024"
license.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
axum.workspace = true
clap = { workspace = true, features = ["derive"] }
config = { workspace = true, features = ["convert-case", "toml"] }
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
opentelemetry-semantic-conventions.workspace = true
prost.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx = { workspace = true, features = [
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio",
    "time",
    "tls-rustls",
] }
time.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tonic.workspace = true
tonic-reflection.workspace = true
tower = { workspace = true, features = ["steer"] }
tracing.workspace = true
tracing-opentelemetry.workspace = true
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-axum.workspace = true
utoipa-rapidoc = { workspace = true, optional = true }
utoipa-redoc = { workspace = true, optional = true }
utoipa-scalar = { workspace = true, optional = true }
utoipa-swagger-ui = { workspace = true, optional = true }
uuid = { workspace = true, features = ["serde"] }
warden-core = { workspace = true, features = ["configuration", "serde-time"] }
warden-middleware.workspace = true

[features]
default = []
swagger = ["dep:utoipa-swagger-ui", "utoipa-swagger-ui/axum"]
redoc = ["dep:utoipa-redoc", "utoipa-redoc/axum"]
rapidoc = ["dep:utoipa-rapidoc", "utoipa-rapidoc/axum"]
scalar = ["dep:utoipa-scalar", "utoipa-scalar/axum"]

[dependencies.warden-stack]
workspace = true
features = ["api", "cache", "nats-jetstream", "postgres", "opentelemetry-tonic", "tracing-loki"]
