[package]
name = "warden-pseudonyms"
version = "0.1.0"
edition = "2024"
license.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
config = { workspace = true, features = ["convert-case", "toml"] }
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tracing.workspace = true
warden-core = { workspace = true, features = ["pseudonyms", "serde-time"] }

[dependencies.warden-stack]
workspace = true
features = ["api", "cache", "postgres", "opentelemetry", "tracing-loki"]
