[package]
name = "warden-router"
version = "0.1.0"
edition = "2024"
license.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
bytes = "1.10.1"
clap = { workspace = true, features = ["derive"] }
config = { workspace = true, features = ["convert-case", "toml"] }
futures-util.workspace = true
moka = { version = "0.12.10", features = ["future"] }
opentelemetry.workspace = true
opentelemetry-semantic-conventions.workspace = true
prost.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tonic.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
uuid = { workspace = true, features = ["v7"] }
warden-core = { workspace = true, features = [
    "message",
    "configuration",
    "serde-time"
] }

[dependencies.warden-stack]
workspace = true
features = [
    "nats-jetstream",
    "opentelemetry-tonic",
    "tracing-loki",
]
