[package]
name = "warden-driver"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
clap = { workspace = true, features = ["derive"] }
config = { workspace = true, features = ["toml"] }
futures-util.workspace = true
opentelemetry.workspace = true
prost.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx = { workspace = true, features = [
    "json",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio",
    "time",
    "tls-rustls",
] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tonic.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tx_hist = { path = "../../database/tx_hist" }
warden-core = { workspace = true, features = ["serde", "time"] }
warden-infra = { workspace = true, features = [
    "cache",
    "nats-jetstream",
    "opentelemetry",
    "postgres",
    "tracing",
] }
