[package]
name = "warden"
version = "0.1.0"
edition = "2024"
license.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["macros"] }
clap = { workspace = true, features = ["derive"] }
config = { workspace = true, features = ["convert-case", "toml"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tracing.workspace = true
warden-core = { workspace = true, features = ["iso20022"] }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }

[dependencies.stack-up]
workspace = true
features = ["api", "tracing"]
