[package]
name = "warden"
version = "0.1.0"
edition = "2024"
license.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["macros"] }
clap = { workspace = true, features = ["derive"] }
config = { workspace = true, features = ["convert-case", "toml"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tracing.workspace = true
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-axum.workspace = true
utoipa-rapidoc = { workspace = true, optional = true }
utoipa-redoc = { workspace = true, optional = true }
utoipa-scalar = { workspace = true, optional = true }
utoipa-swagger-ui = { workspace = true, optional = true }
warden-core = { workspace = true, features = ["iso20022", "serde", "openapi"] }

[features]
default = []
swagger = ["dep:utoipa-swagger-ui", "utoipa-swagger-ui/axum"]
redoc = ["dep:utoipa-redoc", "utoipa-redoc/axum"]
rapidoc = ["dep:utoipa-rapidoc", "utoipa-rapidoc/axum"]
scalar = ["dep:utoipa-scalar", "utoipa-scalar/axum"]

[dev-dependencies]
tower = { workspace = true, features = ["util"] }

[dependencies.stack-up]
workspace = true
features = ["api", "opentelemetry", "tracing-loki"]
