[package]
name = "warden"
version = "0.1.0"
edition = "2024"
license.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
axum = { workspace = true, features = ["macros"] }
clap = { workspace = true, features = ["derive"] }
config = { workspace = true, features = ["convert-case", "toml"] }
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
opentelemetry.workspace = true
opentelemetry-semantic-conventions.workspace = true
prost.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx = { workspace = true, features = [
    "json",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio",
    "time",
    "tls-rustls",
    "uuid",
] }
time = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tonic.workspace = true
tower-http = { workspace = true, features = [
    "timeout",
    "trace",
    "request-id",
] }
tracing.workspace = true
tracing-opentelemetry.workspace = true
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-axum.workspace = true
utoipa-rapidoc = { workspace = true, optional = true }
utoipa-redoc = { workspace = true, optional = true }
utoipa-scalar = { workspace = true, optional = true }
utoipa-swagger-ui = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v7", "serde"] }
warden-core = { workspace = true, features = ["message", "pseudonyms", "serde", "openapi"] }
warden-middleware.workspace = true

[features]
default = []
swagger = ["dep:utoipa-swagger-ui", "utoipa-swagger-ui/axum"]
redoc = ["dep:utoipa-redoc", "utoipa-redoc/axum"]
rapidoc = ["dep:utoipa-rapidoc", "utoipa-rapidoc/axum"]
scalar = ["dep:utoipa-scalar", "utoipa-scalar/axum"]

[dev-dependencies]
tower = { workspace = true, features = ["util"] }

[dependencies.warden-stack]
workspace = true
features = ["api", "cache", "nats-jetstream", "opentelemetry-tonic", "postgres", "tracing-loki"]
