[package]
name = "tx_hist"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tracing.workspace = true
serde.workspace = true
sqlx = { workspace = true, features = [
    "json",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio",
    "time",
    "tls-rustls",
] }
warden-infra = { workspace = true, features = ["postgres"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
