[package]
name = "warden-core"
version = "0.1.0"
edition = "2024"
license.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
prost = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
tonic-types = { version = "0.14.0", optional = true }

[features]
default = []
iso20022 = ["dep:prost", "dep:tonic", "dep:tonic-types"]

[build-dependencies]
tonic-prost-build = { version = "0.14.0", features = ["cleanup-markdown"] }
