[package]
name = "warden-core"
version = "0.1.0"
edition = "2024"
license.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
prost = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
time = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
tonic-types = { version = "0.14.0", optional = true }
utoipa = { workspace = true, optional = true }

[features]
default = []
iso20022 = ["dep:prost", "dep:tonic", "dep:tonic-types"]
serde = ["dep:serde", "serde/derive", "dep:serde_json"]
serde-time = [
    "time",
    "serde",
    "time/serde",
]
time = [
    "time/parsing",
    "time/formatting",
    "time/macros",
]
openapi = ["dep:utoipa", "serde-time", "utoipa/time"]

[build-dependencies]
tonic-prost-build = { version = "0.14.0", features = ["cleanup-markdown"] }
