[package]
name = "warden-infra"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-nats = { optional = true, workspace = true }
bon = { optional = true, workspace = true }
log.workspace = true
redis = { version = "0.27.6", optional = true }
secrecy = { optional = true, workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
sqlx = { optional = true, workspace = true }
thiserror.workspace = true
tracing = { optional = true, workspace = true }
tracing-subscriber = { version = "0.3.19", optional = true }
url = { workspace = true, optional = true }

[features]
default = []
api = []
cache = [
    "dep:redis",
    "redis/cluster-async",
    "redis/connection-manager",
    "redis/tokio-comp",
    "dep:bon",
    "url/serde",
]
nats = ["dep:bon", "dep:async-nats"]
nats-core = ["nats"]
nats-jetstream = ["nats"]
postgres = ["dep:bon", "secrecy/serde", "sqlx/postgres"]
tracing = ["dep:tracing", "tracing-subscriber/env-filter"]
