[package]
name = "warden-infra"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-nats = { optional = true, workspace = true }
bon = { optional = true, workspace = true }
http = { workspace = true, optional = true }
log.workspace = true
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { version = "0.27.1", optional = true }
opentelemetry-http = { version = "0.27.0", optional = true }
opentelemetry-otlp = { version = "0.27.0", optional = true }
opentelemetry-semantic-conventions = { version = "0.27.0", optional = true }
redis = { workspace = true, optional = true }
secrecy = { optional = true, workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
sqlx = { optional = true, workspace = true }
thiserror.workspace = true
tracing = { optional = true, workspace = true }
tracing-opentelemetry = { optional = true, workspace = true }
tracing-subscriber = { version = "0.3.19", optional = true }
url = { workspace = true, optional = true }

[features]
default = []
api = []
cache = [
    "dep:redis",
    "redis/cluster-async",
    "redis/connection-manager",
    "redis/tokio-comp",
    "dep:bon",
    "url/serde",
]
nats = ["dep:bon", "dep:async-nats"]
nats-core = ["nats"]
nats-jetstream = ["nats"]
opentelemetry = [
    "dep:opentelemetry",
    "dep:tracing-opentelemetry",
    "http",
    "opentelemetry_sdk/rt-tokio",
    "opentelemetry-http",
    "opentelemetry-otlp/tonic",
    "opentelemetry-semantic-conventions/semconv_experimental",
    "tracing",
]
postgres = ["dep:bon", "secrecy/serde", "sqlx/postgres"]
tracing = ["dep:tracing", "tracing-subscriber/env-filter"]
