[package]
name = "warden-middleware"
version = "0.1.0"
edition = "2024"
license.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
publish = false

[dependencies]
axum.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
tower-http = { workspace = true, features = [
    "request-id",
    "trace",
] }
tracing.workspace = true
